--- a/framework/test.html
+++ b/framework/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Framework Test Page</title>
-    <link rel="stylesheet" ßhref="css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
