Add media queries for standard devices.

--- a/framework/test.html
+++ b/framework/test.html
@@ -8,7 +8,9 @@
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div class="grid">
+<div class="grid-phones"></div>
+<div class="grid-tablets"></div>
+<div class="grid-laptops">
     <div class="row">
         <div class="col-6">
             <img src="http://placehold.it/100">
@@ -21,7 +23,7 @@
     </div>
     <div class="row">
         <div class="col-12">
-            <img src="http://placekitten.com/g/960/350" id="img-center">
+            <img src="http://placehold.it/960x350" id="img-center">
         </div>
     </div>
     <div class="row">
