--- a/framework/test.html
+++ b/framework/test.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="js/jquery-2.1.3.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <img src="http://placehold.it/100" alt="logo" class="img-responsive title-logo">
+            <img src="images/logos/aj_3_images.jpeg" alt="logo" class="img-responsive title-logo">
         </div>
         <div class="col-md-6 text-right text-uppercase">
             <h1 class="text-thin title-super">ankit jaiswal</h1>
@@ -36,19 +38,80 @@
     </div>
     <div class="row text-center">
         <div class="col-md-4">
-            <img src="http://placehold.it/300" alt="project-1 image" class="img-responsive">
+            <img src="http://placehold.it/300" alt="project-1 image" class="img-responsive" data-toggle="modal" data-target="#project1">
+
             <h3>Project 1</h3>
+
             <p>https://url/to/project/1</p>
         </div>
         <div class="col-md-4">
-            <img src="http://placehold.it/300" alt="project-2 image" class="img-responsive">
+            <img src="http://placehold.it/300" alt="project-2 image" class="img-responsive" data-toggle="modal" data-target="#project2">
+
             <h3>Project 2</h3>
+
             <p>https://url/to/project/2</p>
         </div>
         <div class="col-md-4">
-            <img src="http://placehold.it/300" alt="project-3 image" class="img-responsive">
+            <img src="http://placehold.it/300" alt="project-3 image" class="img-responsive" data-toggle="modal" data-target="#project3">
+
             <h3>Project 3</h3>
+
             <p>https://url/to/project/3</p>
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<!-- Project1 -->
+<div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabelProj1">Project 1</h4>
+            </div>
+            <div class="modal-body">
+                <img class="img-responsive" src="http://placehold.it/300" alt="project-1 image">
+                This was my first project in this class. I learned a lot about HTML and CSS.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Project2 -->
+<div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabelProj2">Project 2</h4>
+            </div>
+            <div class="modal-body">
+                <img class="img-responsive" src="http://placehold.it/300" alt="project-2 image">
+                This was my first project in this class. I learned a lot about HTML and CSS.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Project3 -->
+<div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabelProj3">Project 3</h4>
+            </div>
+            <div class="modal-body">
+                <img class="img-responsive" src="http://placehold.it/300" alt="project-3 image">
+                This was my first project in this class. I learned a lot about HTML and CSS.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
         </div>
     </div>
 </div>
