--- a/framework/test.html
+++ b/framework/test.html
@@ -37,7 +37,7 @@
             <h2 class="text-muted">Featured Work</h2>
         </div>
     </div>
-    <div class="row text-center">
+    <div class="row">
         <div class="col-md-4">
             <img src="http://placehold.it/300" alt="project-1 image" class="img-responsive" data-toggle="modal" data-target="#project1">
 
