Updating placehold.it img tag to point to real images.

--- a/framework/index.html
+++ b/framework/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <img src="http://placehold.it/1140x350" alt="Main portfolio image" class="img-responsive">
+                <img src="images/code_950x350.jpeg" alt="Main portfolio image" class="img-responsive">
             </div>
         </div>
         <div class="row">
@@ -39,21 +39,21 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <img src="http://placehold.it/300" alt="project-1 image" class="img-responsive" data-toggle="modal" data-target="#project1">
+                <img src="images/appify_300x200.jpeg" alt="project-1 image" class="img-responsive" data-toggle="modal" data-target="#project1">
 
                 <h3>Project 1</h3>
 
                 <p>https://url/to/project/1</p>
             </div>
             <div class="col-md-4">
-                <img src="http://placehold.it/300" alt="project-2 image" class="img-responsive" data-toggle="modal" data-target="#project2">
+                <img src="images/sunflower_300x200.jpeg" alt="project-2 image" class="img-responsive" data-toggle="modal" data-target="#project2">
 
                 <h3>Project 2</h3>
 
                 <p>https://url/to/project/2</p>
             </div>
             <div class="col-md-4">
-                <img src="http://placehold.it/300" alt="project-3 image" class="img-responsive" data-toggle="modal" data-target="#project3">
+                <img src="images/bokeh_300x200.jpeg" alt="project-3 image" class="img-responsive" data-toggle="modal" data-target="#project3">
 
                 <h3>Project 3</h3>
 
