Changing logo to use a svg file.

--- a/framework/index.html
+++ b/framework/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="images/logos/aj_3_images.jpeg" alt="logo" class="img-responsive title-logo">
+                <img src="images/logos/logo.svg" alt="logo" class="img-responsive title-logo">
             </div>
             <div class="col-md-6 text-right text-uppercase">
                 <h1 class="text-thin title-super">ankit jaiswal</h1>
