Replacing modal's image to point to real image.

--- a/framework/index.html
+++ b/framework/index.html
@@ -71,7 +71,7 @@
                     <h4 class="modal-title" id="myModalLabelProj1">Project 1</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-responsive" src="http://placehold.it/300" alt="project-1 image">
+                    <img class="img-responsive" src="images/appify_300x200.jpeg" alt="project-1 image">
                     This was my first project in this class. I learned a lot about HTML and CSS.
                 </div>
                 <div class="modal-footer">
@@ -89,8 +89,8 @@
                     <h4 class="modal-title" id="myModalLabelProj2">Project 2</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-responsive" src="http://placehold.it/300" alt="project-2 image">
-                    This was my first project in this class. I learned a lot about HTML and CSS.
+                    <img class="img-responsive" src="images/sunflower_300x200.jpeg" alt="project-2 image">
+                    This was my second project in this class. I will be talking about the project in detail here.
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -107,8 +107,8 @@
                     <h4 class="modal-title" id="myModalLabelProj3">Project 3</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-responsive" src="http://placehold.it/300" alt="project-3 image">
-                    This was my first project in this class. I learned a lot about HTML and CSS.
+                    <img class="img-responsive" src="images/bokeh_300x200.jpeg" alt="project-3 image">
+                    This was my third project in this class. I will be talking about the project in detail here.
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
